<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_fragment"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.recraftify.ui.fragment.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.dicoding.recraftify.ui.fragment.scan.ScanFragment"
        android:label="@string/scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.dicoding.recraftify.ui.fragment.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dicoding.recraftify.ui.fragment.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>