<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.activity.result.ResultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_scan_waste"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/logo_kecil" />

        <TextView
            android:id="@+id/title_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/result_title"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_scan_waste"/>

        <TextView
            android:id="@+id/judul_jenis_sampah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tv_judul_jenis_sampah"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_result"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/jenis_sampah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/tv_jenis_sampah"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/judul_jenis_sampah"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/penempatan_sampah"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/briging_tempat_sampah"
            android:textSize="14sp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/jenis_sampah"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/tong_sampah"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:layout_marginTop="30dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/penempatan_sampah"
            tools:src="@drawable/icon" />

        <TextView
            android:id="@+id/tv_rekomendasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/rekomendasi"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tong_sampah"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_listRecomendation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rekomendasi"
            tools:listitem="@layout/item_recipe"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>