<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.detailhistory.DetailHistoryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll|enterAlways">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_scan_waste"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/logo_kecil" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <TextView
            android:id="@+id/title_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:text="@string/result_title"
            android:textSize="26sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/judul_jenis_sampah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/tv_judul_jenis_sampah"
            android:textSize="18sp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/jenis_sampah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/tv_jenis_sampah"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/penempatan_sampah"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/briging_tempat_sampah"
            android:textSize="14sp"
            android:textAlignment="center"
            android:layout_gravity="center"/>
        <ImageView
            android:id="@+id/tong_sampah"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:scaleType="centerCrop"
            app:layout_collapseMode="parallax"
            tools:src="@drawable/logo_kecil"
            android:layout_gravity="center"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/page_result_radius"
        app:layout_anchorGravity="bottom"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_rekomendasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:text="@string/rekomendasi"
                android:textSize="26sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                tools:listitem="@layout/item_recipe"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
